--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,8 +5,15 @@ html, body {
   padding: 0;
   font-family: 'Nunito Sans', sans-serif;
   background: #cfcbc8;
+  overflow-x: hidden;
 }
 
 body {
   padding-top: 50px;
+}
+
+@media screen and (max-width: 1024px){
+  body {
+    padding-top: 20px;
+  }
 }
